# QIShort

./: Cargo.toml  README.md  config.h  keymacros.h  qishort.c
src/: key.rs  main.rs  matcher.rs  old.rs
src/handler/: branch.rs  dir.rs  functions.rs  mod.rs  state.rs  tree.rs
src/hardware/: mod.rs  xorg.rs
src/key/: matcher.rs  mod.rs
src/keyboard/: mod.rs  xorg.rs
