[package]
name = "qishort"
version = "0.1.0"
authors = ["Dimitris Katsavos"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = "2.21.0"
libc = "0.2.153"
lazy_static = "1.4.0"
thiserror = "1.0.56"
anyhow = "1.0.79"
regex = "1.10.3"
